tests/baselines/reference/staticAndNonStaticPropertiesSameName.errors.txt
staticAndNonStaticPropertiesSameName.ts(2,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== staticAndNonStaticPropertiesSameName.ts (1 errors) ====
    class C {
        x: number;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        static x: number;
    
        f() { }
        static f() { }
    }